# funky

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  buf.gen.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
agent_service/local_python_anthropic/: Dockerfile  README.md
agent_service/local_python_anthropic/src/funky_agent_service_anthropic/: loop.py  server.py  service.py
agent_service/local_python_anthropic/tests/: test_agent_service.py
apps/api/: package-lock.json  package.json
apps/api/src/: app.ts  config.ts  index.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: agents.ts  environments.ts
apps/api/test/: agents.test.ts  app.test.ts  config.test.ts  helpers.ts  sessions.integration.test.ts  sse.test.ts
apps/web/: README.md  vite.config.ts
apps/web/src/: env.d.ts
apps/web/src/console/: Agents.tsx  Environments.tsx  QuickStart.tsx  Sessions.tsx  curl.ts  data.ts  parts.tsx
apps/web/src/lib/: api.ts  types.ts
apps/worker/: package.json  vitest.config.ts
apps/worker/src/: config.ts  health.ts  index.ts  telemetry.ts  worker.ts
apps/worker/test/: config.test.ts  health.test.ts  telemetry.test.ts  worker.test.ts
client/gcp_python/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
client/gcp_python/src/funky_client/: __init__.py  client.py  server.py
client/gcp_python/tests/: test_server.py
client/local_python/: Dockerfile
client/python/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
client/python/src/funky_client/: cli.py  client.py  server.py
client/python/tests/: test_cli.py  test_client.py  test_server.py
config_registry/local_python_jsonl/: Dockerfile
docs/: architecture.mmd
proto/funky/type/v1/: environment.proto  event.proto
sandbox_runtime/local_python_docker/: Dockerfile
session_store/: README.md
session_store/gcp_python_postgres/: README.md  cloudbuild.yaml  pyproject.toml
session_store/gcp_python_postgres/src/funky_session_store_postgres/: __init__.py  db.py  models.py  server.py  service.py  store.py
session_store/gcp_python_postgres/tests/: test_postgres_session_store.py
session_store/local_python_jsonl/: Dockerfile  README.md  pyproject.toml
session_store/local_python_jsonl/src/funky_session_store_jsonl/: __init__.py  server.py  service.py  store.py
session_store/local_python_jsonl/tests/: test_session_store.py
tests/chaos/: README.md  package.json  tsconfig.json  vitest.config.ts
tests/chaos/src/: fixtures.ts  h1.kill-boundaries.test.ts  h2.double-delivery.test.ts  h3.slow-vs-lease.test.ts  h4.reattach.test.ts  h5.terminal-event.test.ts  h6.provision-crash.test.ts  h7.soak.test.ts  harness.ts  reference.test.ts
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  styles.css  types.ts  vite-env.d.ts
web/src/api/: client.ts  types.ts
web/src/components/: Avatar.tsx  Banner.tsx  Composer.tsx  Conversation.tsx  CreateAgentModal.tsx  EmptyState.tsx  FirstRun.tsx  Markdown.tsx  Mascot.tsx  SessionTabs.tsx  Sidebar.tsx  Turn.tsx  TypingIndicator.tsx
web/src/lib/: avatar.ts  events.ts  models.ts  storage.ts
web/src/state/: useFunkyStore.ts
