# funky-client — the thin orchestrator developers call. It wires the four Funky
# services together over their generated ConnectRPC clients; it has no server and
# no backend of its own. See README.md.
[project]
name = "funky-client"
version = "0.0.0"
description = "FunkyClient — the orchestrator that ties the four Funky services together."
requires-python = ">=3.10"
dependencies = [
  "funky-protos",
]

# `funky-client-server` exposes the client over HTTP for Cloud Run. The HTTP
# stack is optional — the library itself doesn't need it — so it lives behind a
# `server` extra (`pip install "funky-client[server]"`).
[project.optional-dependencies]
server = [
  # Small ASGI framework for the REST + SSE endpoints.
  "starlette>=0.37",
  # ASGI server, as the Postgres backends use; supports SSE streaming.
  "uvicorn>=0.30",
  # Mint Cloud Run ID tokens so the client can call private (auth-required)
  # backends; see funky_client.client._IdTokenAuth. The [requests] extra pulls
  # in `requests`, which google.auth.transport.requests needs but google-auth
  # does not install on its own.
  "google-auth[requests]>=2.0",
]

# funky-client-server: the client over HTTP, for Cloud Run.
[project.scripts]
funky-client-server = "funky_client.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funky_client"]

# Resolve funky-protos from the workspace rather than PyPI.
[tool.uv.sources]
funky-protos = { workspace = true }
