# funky-session-store-jsonl — a SessionStore backend that stores sessions and
# their append-only event history in two JSONL files (sessions.jsonl,
# events.jsonl). Fully local, no database. See README.md to run it.
[project]
name = "funky-session-store-jsonl"
version = "0.0.0"
description = "Local JSONL-backed implementation of the Funky SessionStore service."
requires-python = ">=3.10"
dependencies = [
  "funky-protos",
  # Pure-Python WSGI server. Required over stdlib wsgiref, which deadlocks
  # connect-python's request-body drain on the error path (see server.py).
  "waitress>=3",
]

[project.scripts]
funky-session-store-jsonl = "funky_session_store_jsonl.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funky_session_store_jsonl"]

# Resolve funky-protos from the workspace (gen/python) rather than PyPI.
[tool.uv.sources]
funky-protos = { workspace = true }
